--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/netinfo": "^9.3.7",
+    "amazon-cognito-identity-js": "^6.1.2",
+    "aws-amplify": "^5.0.16",
+    "aws-amplify-react-native": "^7.0.2",
     "expo": "~48.0.5",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.3",
     "react-dom": "18.2.0",
-    "react-native-web": "~0.18.10",
-    "@expo/webpack-config": "^18.0.1"
+    "react-native": "0.71.3",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
